# ProjectHadesTesting

./: .gitignore  Dockerfile  README.md  cleanup.sh  deep_cleanup.sh  docker-compose.yml  hades_unified.py  organize_project.sh  pyproject.toml  requirements.txt  setup.py
dev-utilities/: README.md  build_rag_dataset.py  check_phoenix_project.py  check_phoenix_projects.sh  clean_embeddings.sh  debug_processor.py  direct_gpu_exporter.py  direct_phoenix_adapter.py  direct_phoenix_fix.py  fix_gpu_metrics_collection.sh  fix_phoenix_config.py  fix_phoenix_connection.py  fix_phoenix_project.py  install_nltk_dependencies.py  pathrag_phoenix_adapter_patch.py  phoenix_adapter_test.py  phoenix_arize_integration.py  phoenix_direct_integration.py  phoenix_direct_test.py  (+10 more)
dev-utilities-backup/: README.md  direct_dataset_builder.py  direct_phoenix_project_fix.py  enrich_rag_dataset.py  exact_phoenix_trace.py  fix_pathrag_config.py  fix_pathrag_project.py  fix_rag_dataset_collector.py  fixed_main.py  langchain_phoenix_test.py  minimal_dataset_builder.py  patch_pdf_processor.py  pathrag_env_config  pathrag_phoenix_connector.py  phoenix_env.sh  phoenix_otel_project.py  phoenix_otlp_test.py  phoenix_project_creator.py  phoenix_test_fixed.py  run_dataset_builder.py  run_pathrag_with_phoenix.sh  run_rag_builder.py  setup_qwen_model.py  simple_phoenix_langchain_test.py  simple_phoenix_trace.py  start_arize_phoenix.py  test_pathrag_dataset.py  test_pathrag_with_dataset.sh  test_phoenix_connection.py  test_phoenix_http.py  test_phoenix_trace.py  update_rag_phoenix_integration.py
(+203 files in other folders)
