[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hades-xnx-validation"
version = "0.1.0"
authors = [
    {name = "HADES Research Team"},
]
description = "Experimental validation framework for XnX notation in RAG systems"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/hades-xnx-validation"
"Bug Tracker" = "https://github.com/yourusername/hades-xnx-validation/issues"

[tool.setuptools]
package-dir = {"" = "."}

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=hades_xnx_validation"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
